  * Use a single private debconf-communicate instance for five queries in
    base frontend initialisation rather than using the debconf_operation
    wrapper. This is less convenient, but significantly speeds up startup
    (in a kvm instance here, 19 seconds -> 4 seconds).
  * Remove hardcoded invisible_char properties in order to use GTK's
    defaults (LP: #225882).

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 23 Jul 2008 15:37:27 -0400

ubiquity (1.9.6) intrepid; urgency=low

  * Add a dependency on intltool to fix a build failure.

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 23 Jul 2008 14:41:12 -0400

ubiquity (1.9.5) intrepid; urgency=low

  [ Colin Watson ]
  * Update README to document --automatic option.
  * Direct questions to the ubuntu-installer list rather than to me
    personally.
  * Depend on kdesudo | kdesudo-kde4 (the latter is transitional now).
  * KDE frontend:
    - Fix crash on selecting non-ASCII options in the "Use as:" menu while
      creating a partition (LP: #247993).
    - Fix crash when entering a non-ASCII mount point (LP: #128554).
  * Preseed netcfg/dhcp_ntp_servers from install component rather than
    clock-setup, since the latter doesn't have debconf database access at
    the right time (LP: #251089).

  [ Jonathan Riddell ]
  * language.py: Change string to unicode, fixes crash when using KDE 
    frontend, closes LP: #251097
  * KDE frontend
   - comment out dcop code
   - add set_hostname method
   - temporarily force sudo until we work out why kdesudo stops it passing 
     partitioning stage, bug 251203

  [ Evan Dandrea ]
  * Automatic update of included source packages: user-setup
    1.20ubuntu3.

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 23 Jul 2008 12:48:57 -0400

ubiquity (1.9.4) intrepid; urgency=low

  [ Colin Watson ]
  * Preseed netcfg/dhcp_ntp_servers to the empty string so that clock-setup
    stops breaking.
  * Find and copy the kernel from the CD root if it is missing from the live